All tests passing again